--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -119,6 +119,8 @@
     --sidebar-border: hsl(0 0% 91%);
     --sidebar-ring: hsl(217.2 91.2% 59.8%);
     --sidebar: hsl(0 0% 98%);
+
+    --toastify-color-dark: oklch(44.6% 0.03 256.802);
 }
 
 .dark {
