--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -124,7 +124,7 @@
 }
 
 .dark {
-    --background: hsl(0 0% 3.9%);
+    --background: rgb(10, 3, 45);
     --foreground: hsl(0 0% 98%);
     --card: hsl(0 0% 3.9%);
     --card-foreground: hsl(0 0% 98%);
